api: add new docs endpoints
